--- a/Client/package.json
+++ b/Client/package.json
@@ -18,7 +18,8 @@
     "@angular/router": "~11.0.0",
     "bootstrap": "^4.6.0",
     "rxjs": "~6.6.3",
-    "zone.js": "~0.11.3"
+    "zone.js": "~0.11.3",
+    "@ngrx/store": "~11.1.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.0",
