--- a/Client/package.json
+++ b/Client/package.json
@@ -20,7 +20,8 @@
     "rxjs": "~6.6.3",
     "zone.js": "~0.11.3",
     "@ngrx/store": "~11.1.0",
-    "@ngrx/effects": "~11.1.0"
+    "@ngrx/effects": "~11.1.0",
+    "@ngrx/router-store": "~11.1.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.0",
