--- a/Client/package.json
+++ b/Client/package.json
@@ -21,7 +21,8 @@
     "zone.js": "~0.11.3",
     "@ngrx/store": "~11.1.0",
     "@ngrx/effects": "~11.1.0",
-    "@ngrx/router-store": "~11.1.0"
+    "@ngrx/router-store": "~11.1.0",
+    "@ngrx/store-devtools": "~11.1.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.0",
